--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,5 @@ services:
     volumes:
       - ./data:/data
       - ./io:/io
-
-# volumes:
-#   database:
+      - ./app/app_manager:/app/app_manager:ro
+      - ./app/drink_consumption:/app/drink_consumption:ro
